--- a/demo.html
+++ b/demo.html
@@ -13,7 +13,7 @@
 $(function(){
             var options={
                 target: '#smd1',
-		lan: 'zh-CN',
+		lan: 'en-US',
                 preview: true,
             };
             new SimpleMarkdown(options);
